Fix alignment ul

--- a/_sass/2-sections/_projects.sass
+++ b/_sass/2-sections/_projects.sass
@@ -76,6 +76,7 @@
 
   ul
     list-style-type: none
+    padding: 0
 
   svg
     margin-right: 3px
